# pkghawk

./: .env.example  .mcp.json  BACKLOG.md  Dockerfile  README.md  docker-compose.yml  pkghawk.md  pyproject.toml
.github/workflows/: ci.yml  publish-client.yml
client/: README.md  pyproject.toml
client/pkghawk_client/: __init__.py  cli.py  client.py
client/tests/: test_cli.py  test_client.py
deploy/: deploy.sh  docker-compose.prod.yml  nginx.conf  setup-server.sh
deploy/cisa-proxy/: worker.js  wrangler.toml
deploy/cisa-proxy/.wrangler/cache/: wrangler-account.json
pkghawk/: config.py  main.py  mcp_server.py  redis_client.py  schema.py
pkghawk/pollers/: cisa_kev.py  github_advisory.py  grok.py  osv.py  pypi_rss.py  socket_blog.py
pkghawk/processing/: confidence.py  deduplicator.py  normalizer.py  sanitizer.py
status/: index.html
tests/: test_api.py  test_confidence.py  test_normalizer.py  test_sanitizer.py  test_schema.py
