[project]
name = "pkghawk"
version = "0.1.0"
description = "Python client for pkghawk — real-time package threat feed"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Gopi Kannappan" }]
keywords = ["security", "supply-chain", "packages", "npm", "pypi", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[project.scripts]
pkghawk = "pkghawk_client.cli:main"

[project.urls]
Homepage = "https://pkghawk.dev"
Repository = "https://github.com/gopikannappan/pkghawk"

[tool.hatch.build.targets.wheel]
packages = ["pkghawk_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
